--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.6",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-twitter": "^1.0.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^3.0.0",
