--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "file-loader": "^0.11.2",
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.6",
     "passport": "^0.3.2",
@@ -37,6 +38,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "image-webpack-loader": "^3.3.1",
     "webpack": "^1.13.1"
   }
 }
